# Satisfactorio

./: Cargo.toml
assets/: la GROSSE bite à Clément là, miam miam xDDD.txt
assets/shaders/: shader.wgsl
src/: camera.rs  debug_controls.rs  main.rs  movement.rs  player.rs  state.rs  world.rs  world_beta_setup.rs  world_gen.rs  world_setup.rs
src/common/geometry/: direction.rs  mod.rs  plane.rs  vertex.rs
src/common/utils/: mod.rs  updatable.rs
src/engine/: mod.rs
src/engine/core/: application.rs  inputs.rs  mod.rs  state.rs
src/engine/render/: buffer.rs  camera.rs  geometry.rs  mesh.rs  mod.rs  raycast.rs  render.rs  texture.rs
src/engine/render/mesh/: chunk.rs  face_mask.rs  mod.rs  texto.rs  world.rs
src/engine/render/text/: text_renderer.rs
src/game/: mod.rs
src/game/player/: camera.rs  player.rs
src/game/state/: game.rs
src/game/world/: block.rs  chunk.rs  mod.rs  padded_chunk.rs  world.rs
src/world_generator/: chunks.rs  mod.rs  world_beta_setup.rs  world_gen.rs
src/world_generator_beta/: mesh.rs
