[package]
name = "satisfactorio"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = "0.14.2"
# binary-greedy-meshing = "0.3.6"
# noise = "0.9.0"

anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "28.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }

# Optimisation:

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
